; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/ipath/extr_ipath_eeprom.c_sda_out.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/ipath/extr_ipath_eeprom.c_sda_out.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ipath_devdata = type { i32 }

@i2c_line_sda = common dso_local global i32 0, align 4
@i2c_line_high = common dso_local global i32 0, align 4
@i2c_line_low = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ipath_devdata*, i64)* @sda_out to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sda_out(%struct.ipath_devdata* %0, i64 %1) #0 {
  %3 = alloca %struct.ipath_devdata*, align 8
  %4 = alloca i64, align 8
  store %struct.ipath_devdata* %0, %struct.ipath_devdata** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.ipath_devdata*, %struct.ipath_devdata** %3, align 8
  %6 = load i32, i32* @i2c_line_sda, align 4
  %7 = load i64, i64* %4, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i32, i32* @i2c_line_high, align 4
  br label %13

11:                                               ; preds = %2
  %12 = load i32, i32* @i2c_line_low, align 4
  br label %13

13:                                               ; preds = %11, %9
  %14 = phi i32 [ %10, %9 ], [ %12, %11 ]
  %15 = call i32 @i2c_gpio_set(%struct.ipath_devdata* %5, i32 %6, i32 %14)
  %16 = load %struct.ipath_devdata*, %struct.ipath_devdata** %3, align 8
  %17 = call i32 @i2c_wait_for_writes(%struct.ipath_devdata* %16)
  ret void
}

declare dso_local i32 @i2c_gpio_set(%struct.ipath_devdata*, i32, i32) #1

declare dso_local i32 @i2c_wait_for_writes(%struct.ipath_devdata*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
